# projector-controller

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  MEMORY.md  PLANS.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
crates/projector-controller-renderer/: Cargo.toml
crates/projector-controller-renderer/src/: main.rs  render.rs  shader.wgsl
docs/: ARCHITECTURE.md  EXPERIMENTS.md  GLOSSARY.md  THEORY.md
docs/adr/: 0000-adr-template.md
examples/: realtime_frames.py  show_frame.py  show_image.py  show_test_pattern.py
src/projector_controller/: __init__.py  cli.py  config.py  display.py  fit.py  media.py  realtime.py  video.py  window.py
src/projector_controller/adapters/: __init__.py  base.py  pygame_backend.py
tests/: test_cli.py  test_config.py  test_fit.py  test_media.py  test_package.py  test_realtime.py  test_show_frame.py
