[project]
name = "projector-controller"
version = "0.1.0"
description = "Python utilities for projecting images and videos to projector displays."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Yoshiaki Maeda" },
]
keywords = ["projector", "projection", "display", "fullscreen", "pygame", "wgpu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: Presentation",
  "Typing :: Typed",
]
dependencies = [
  "pygame>=2.6.1",
]

[project.optional-dependencies]
# Realtime GPU projection. Pulls the Rust renderer binary (separate, platform-specific
# wheel built with maturin). Pinned to the same version to keep the IPC protocol in sync.
realtime = [
  "projector-controller-renderer==0.1.0",
]
# Video file playback via the dedicated media process (decodes with PyAV and feeds the
# Rust renderer). Heavy (bundles ffmpeg), so it is opt-in and separate from `realtime`.
video = [
  "av>=12",
]

[project.urls]
Homepage = "https://github.com/maedayoshiaki/projector-controller"
Repository = "https://github.com/maedayoshiaki/projector-controller"

[project.scripts]
projector-controller = "projector_controller.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pytest>=9.0.1",
  "ruff>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# For local development, resolve the renderer from the in-repo package instead of PyPI,
# so `uv sync --extra realtime` builds it from packages/renderer. The realtime extra is
# optional and not resolved by default, so plain `uv run`/`uv sync` does no Rust build.
# Published wheels are unaffected: this table is uv-only and not part of wheel metadata.
projector-controller-renderer = { path = "packages/renderer" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["projector_controller"]

[[tool.mypy.overrides]]
module = ["pygame", "pygame.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["av", "av.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "projector_controller.adapters.pygame_backend"
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]

